@@ -111,12 +111,12 @@ managed-micronaut-picocli = "4.0.1"
 managed-micronaut-problem = "2.0.0"
 managed-micronaut-rabbitmq = "3.1.0"
 managed-micronaut-r2dbc = "2.0.0"
-managed-micronaut-reactor = "2.0.0"
+managed-micronaut-reactor = "2.1.0"
 managed-micronaut-redis = "5.1.0"
 managed-micronaut-rss = "3.0.0"
 managed-micronaut-rxjava1 = "1.0.0"
-managed-micronaut-rxjava2 = "1.0.0"
-managed-micronaut-rxjava3 = "2.0.0"
+managed-micronaut-rxjava2 = "1.1.0"
+managed-micronaut-rxjava3 = "2.1.0"
 managed-micronaut-security = "3.1.0"
 managed-micronaut-servlet = "3.1.0"
 managed-micronaut-spring = "4.0.0"
