@@ -54,6 +54,10 @@ The SSL handshake timeout can now be configured using the `micronaut.ssl.handsha
 - Repositories with JPA Criteria API specification for Micronaut JDBC/R2DBC
 - Expandable query parameters optimizations
 
+==== Reactive Modules
+
+- The RxJava2, RxJava3, and Reactor modules have been updated with the equivalent static `create` methods on their core counterparts.
+
 == 3.1.0
 
 === Core Features
